test/Execute/SyntaxErrorTest/import_from_missing_module.typh
from import x

"""stderr
syntax error: $FILE:1:1
  unknown tokens

    1 |  from import x
         ^^^^^^^^^^^^^^
"""
